<resources>
    <string name="app_name">Minesweeper</string>
    <string name="minesweeper">Minesweeper</string>
    <string name="best_time">Best Time : %1$d</string>
    <string name="no_best_time">Best Time :</string>
    <string name="previous_time">Last Game Time : %1$d</string>
    <string name="no_previous_time">Last Game Time :</string>
    <string name="select_difficulty">Select Difficulty</string>
    <string name="easy">Easy</string>
    <string name="medium">Medium</string>
    <string name="hard">Hard</string>
    <string name="start">Play</string>
    <string name="mines">Mines</string>
    <string name="restart">Restart</string>
    <string name="time">Time</string>
    <string name="empty_string"> </string>
    <string name="custom">Custom</string>
    <string name="or">OR</string>
    <string name="Rows">Rows</string>
    <string name="Columns">Columns</string>
    <string name="Alert_Message">Enter rows and columns</string>
</resources>